--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 ---
-layout: default
+layout: home
 title: Home
 ---
-<h2>Live Stream</h2>
-<div class="flex-video"><iframe width="560" height="340" src="http://cdn.livestream.com/embed/irishplanninginstitute?layout=4&amp;height=340&amp;width=560&amp;autoplay=false" style="border:0;outline:0" frameborder="0" scrolling="no"></iframe><div style="font-size: 11px;padding-top:10px;text-align:center;width:560px">Watch <a href="http://www.livestream.com/?utm_source=lsplayer&amp;utm_medium=embed&amp;utm_campaign=footerlinks" title="live streaming video">live streaming video</a> from <a href="http://www.livestream.com/irishplanninginstitute?utm_source=lsplayer&amp;utm_medium=embed&amp;utm_campaign=footerlinks" title="Watch irishplanninginstitute at livestream.com">irishplanninginstitute</a> at livestream.com</div></div>
 <h2>Conference Outline</h2>	
-<p>
-	The Irish Planning Institute is pleased to announce details of the 2012 Autumn Conference, which will take place on Friday, 5th October 2012 at the Gibson Hotel, the Point Village, Dublin 1 on the topic of ëUnlocking town centre potential ñ new developments in retail planning and town centre management.
-</p> 
+<p>The Irish Planning Institute is pleased to announce details of the 2012 Autumn Conference, which will take place on Friday, 5th October 2012 at the Gibson Hotel, the Point Village, Dublin 1 on the topic of ëUnlocking town centre potential ñ new developments in retail planning and town centre management.</p> 
 <p>Town centres are the heart of towns serving the needs of local communities, acting as a hub for commerce and enterprise and representing a significant tourist attraction. The more challenging economic context that we are in now has correspondingly impacted on town centres. Responding successfully to this context and securing the continued vitality and viability of town centres requires more innovative solutions that are based on a clear understanding of all the relevant issues. </p>
 <p>The high calibre line up of speakers at the Irish Planning Institute autumn conference will discuss the current context for retailing and town centres and the background to town centre management, describe case study examples of active town centre management and illustrate how planning can lead the way in regenerating town centres and shopping streets. The conference will provide attendees with the knowledge and skills to develop initiatives to strengthen town centre performance.</p>
 
