--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: home
-title: Home
+title: PlanningConf13 - Is going to Belfast
+description: The Irish Planning INstitute Conference is heading north of the Border to Belfast 25th-26th April, be the first to hear when the paper titles are published and registration opens!
 ---
 <h2>Conference Outline</h2>	
 <p>The Irish Planning Institute is pleased to announce details of the 2012 Autumn Conference, which will take place on Friday, 5th October 2012 at the Gibson Hotel, the Point Village, Dublin 1 on the topic of ëUnlocking town centre potential ñ new developments in retail planning and town centre management.</p> 
