updated speakers and layout for conf

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: default
 title: PlanningConf13 - Is going to Belfast
 description: The Irish Planning INstitute Conference is heading north of the Border to Belfast 25th-26th April, be the first to hear when the paper titles are published and registration opens!
 ---
