updated speakers and layout for conf

--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 ---
-layout: default
+layout: new
 title: PlanningConf13 - Is going to Belfast
 description: The Irish Planning INstitute Conference is heading north of the Border to Belfast 25th-26th April, be the first to hear when the paper titles are published and registration opens!
 ---
-<h2>Conference Outline</h2>	
-<p>The Irish Planning Institute is pleased to announce details of the 2012 Autumn Conference, which will take place on Friday, 5th October 2012 at the Gibson Hotel, the Point Village, Dublin 1 on the topic of ëUnlocking town centre potential ñ new developments in retail planning and town centre management.</p> 
-<p>Town centres are the heart of towns serving the needs of local communities, acting as a hub for commerce and enterprise and representing a significant tourist attraction. The more challenging economic context that we are in now has correspondingly impacted on town centres. Responding successfully to this context and securing the continued vitality and viability of town centres requires more innovative solutions that are based on a clear understanding of all the relevant issues. </p>
-<p>The high calibre line up of speakers at the Irish Planning Institute autumn conference will discuss the current context for retailing and town centres and the background to town centre management, describe case study examples of active town centre management and illustrate how planning can lead the way in regenerating town centres and shopping streets. The conference will provide attendees with the knowledge and skills to develop initiatives to strengthen town centre performance.</p>
+<h2>President’s Invitation</h2>
 
-<h2>Speakers</h2>
-<ul>
-	<li>Joanna Kelly - IPI President</li>
-	<li>Aileen Doyle - Senior Advisor, Department of the Environment, Community and Local Government</li> 
-	<li>Gabrielle McKeown - Senior Advisor, Department of the Environment, Community and Local Government</li>
-	<li>James Nugent - Managing Director, Lisney</li>
-	<li>John Spain - Managing Director, John Spain Associates</li>
-	<li>Chris Goddard - Senior Director, GVA Planning</li>
-	<li>David Fitzsimons - CEO, Retail Excellence Ireland</li>
-	<li>Alexander Nicoll - Director, Capital Shopping Centres Group PLC (CSC)</li>
-	<li>Richard Guiney - CEO, Dublin City Business Improvement District</li>
-	<li>Joe Crockett - County and City Manager, Kilkenny</li>
-	<li>Gerry Sheeran - Senior Planner,  Limerick County Council</li>
-</ul>
+<p>I would like to invite you to attend the Irish Planning Institute’s 35 th Annual Conference. We are delighted that this year for the first time, the conference will take place in Belfast, Northern Ireland a dynamic and modern city that has undergone major renewal in recent years.</p>
 
+<p>The National Planning Conference is the main event on the IPI’s calendar and it provides a forum for learning and discussion on planning issues both in Ireland and abroad, and this year in particular cross border learning will play a key role in the conference’s content. It also has of course a social and networking side, allowing delegates from all over the Ireland and abroad to get together and chat during the various breaks and particularly the conference gala dinner which is being held in the exquisite surrounds of Belfast City Hall.</p>
+
+<p>This year’s conference aims to facilitate discussion around the changing role of planning, particularly having regard to local government reform in the south and planning reform in the north.</p>
+
+<p>The conference title ‘Achieving Competitiveness & Promoting Innovation - The Future Role of Planning’, embodies the key themes of the conference which focus on future planning challenges from an economic, maritime and renewable energy perspective whilst also examining the role of planning in facilitating competitive cities and regions. Particular topics will include ‘new planning frameworks through reform and change – the future role of planning’, ‘diversification and innovation – adapting the role of the planner’ and ‘cities regions and competitiveness – the role of planning in economic development and investment’. Delegates will hear perspectives from national and international planning practitioners and representatives of other central stakeholders and State Agencies. We are delighted that Professor Andreas Faludi is amongst those addressing the conference. On Friday morning, prior to the day’s proceedings, there will be a tour of the historical centrepiece of Belfast City and the location of the IPI Conference, Belfast City Hall. On Friday afternoon there will be a tour of Belfast city which will take in significant sites, some of which are historically contentious and others representing the new face of the city.</p>
+
+<p>I look forward to meeting members of the Institute, other colleagues, elected members and all those interested in planning over the two days of the 2013 National Planning Conference.</p>
