--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: new
 title: PlanningConf13 - Is going to Belfast
 description: The Irish Planning INstitute Conference is heading north of the Border to Belfast 25th-26th April, be the first to hear when the paper titles are published and registration opens!
+custom_img: "false"
 ---
 <h2>President’s Invitation</h2>
 
